[package]
name = "libatasmart"
version = "0.3.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
description = "A wrapper around libatasmart-sys raw bindings."
documentation = "https://docs.rs/libatasmart/index.html"
homepage = "https://github.com/cholcombe973/libatasmart"
repository = "https://github.com/cholcombe973/libatasmart"
license = "MIT"
keywords = ["storage"]
edition = '2018'

[dependencies]
libatasmart-sys = { git = "https://github.com/EllisK-L/libatasmart-sys", branch = "parse_attributes" }
nix = "~0.17"
libffi = "3.0.1"